--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -365,6 +365,14 @@ main .item-container{
     width: 80%;
     margin-top: 100px;
 }
+.item-images{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    width: 100%;
+
+}
 main .item-images div{
     --img-size: 500px;
     width: 100%;
@@ -433,6 +441,9 @@ button.item-buy{
     background-color: #000000;
     color: rgb(255, 255, 255);
     transition: 50ms ease-in-out;
+}
+.image-sidebar:hover{
+    filter: brightness(90%);
 }
 button.item-buy:active{
     scale: 0.95;
@@ -699,6 +710,47 @@ header.admin ul{
     margin: 0;
     padding: 0% ;
 }
+.alert-container{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background: rgba(255, 255, 255, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);;
+    z-index: 2;
+}
+.alert-container .alert{
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 350px;
+}
+.alert button{
+    margin-top: 10px;
+    width: 50px;
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    transition: 50ms ease-in-out;
+}
+.alert button:active{
+    scale: 0.95;
+}
+
 header.admin li{
     list-style: none;
     margin: 5px;
